fixed news highlight view component overlapping footer and adjusted CSS so that it is formatted better

--- a/Troydon-Resume-Online(NET Core)/wwwroot/css/styles.css
+++ b/Troydon-Resume-Online(NET Core)/wwwroot/css/styles.css
@@ -58,9 +58,20 @@ a:hover {
 }
 
 .secondary {
-    padding: 20px;
-    margin: 20px;
+    margin-top: 1em;
+    text-align: right;
+    background: blue;
+    line-height: 10px;
+    float: right;
+    margin-top: 150px;
+    width: 200px;
+    padding-right: 25px;
+    padding-top: 0;
+    margin: auto;
+    padding-top: 2em;
+    border-top: 2px solid #999;
 }
+
 /*
 Header and footer
 =============================*/
@@ -88,7 +99,7 @@ header h1, header h2 {
 }
 /*footer*/
 footer {
-
+    margin-top: auto;
 }
 .contact-info a {
 
